# cross-domain-visual-anomaly-detection

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: build-docs.yml  ci.yml
app/: __init__.py
app/api/: dependencies.py  main.py  schemas.py
app/api/routes/: __init__.py  health.py  models.py  predict.py
app/demo/: __init__.py  streamlit_app.py
configs/: base.yaml
configs/domains/: aerial.yaml  industrial.yaml  medical.yaml
configs/models/: autoencoder.yaml  patchcore.yaml
configs/profiles/: colab_gpu.yaml  local_cpu.yaml
data/: README.md
docker/: api.Dockerfile  demo.Dockerfile
docs/: demo_guide.md  example_request.sh  model_card.md  rapport.tex  references.bib
docs/interviews/: questions.md
notebooks/: 01_industrial_data_exploration.ipynb  02_baseline_analysis.ipynb  03_cross_domain_comparison.ipynb
notebooks/colab/: 01_train_autoencoder_colab.ipynb  02_train_patchcore_colab.ipynb  03_cross_domain_experiments_colab.ipynb
scripts/: check_environment.py  compare_models.py  download_data.py  evaluate.py  export_model.py  predict.py  run_cross_domain.py  train.py
src/anomaly_detection/: __init__.py  config.py  constants.py
src/anomaly_detection/data/: __init__.py  datasets.py  domains.py  preprocessing.py  splits.py  synthetic.py  transforms.py
src/anomaly_detection/evaluation/: __init__.py  benchmark.py  collect.py  metrics.py  thresholds.py  visualization.py
src/anomaly_detection/inference/: __init__.py  pipeline.py  postprocessing.py
src/anomaly_detection/models/: __init__.py  autoencoder.py  base.py  patchcore.py
src/anomaly_detection/training/: __init__.py  callbacks.py  engine.py  losses.py
src/anomaly_detection/utils/: __init__.py  device.py  logging.py  mlflow_utils.py  paths.py  reproducibility.py
tests/: conftest.py
tests/integration/: test_api.py  test_training_smoke.py
tests/unit/: test_autoencoder.py  test_config.py  test_datasets.py  test_device.py  test_domains.py  test_metrics.py  test_patchcore.py  test_paths.py  test_postprocessing.py  test_preprocessing.py  test_splits.py  test_thresholds.py
